_azure_env_setup_bibhu_msn/k8cluster/01-dashboard/10-service-dashoboard.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard

---
##Exposing the K8 dashboard to the outer world using NodePort Service
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard-nodeport-svc
  namespace: kubernetes-dashboard
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
    nodePort: 32767
  selector:
    k8s-app: kubernetes-dashboard
  sessionAffinity: None
  type: NodePort
